--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -48,6 +48,7 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'docker.io/ictu/quality-time_${{ matrix.component }}'
+          ignore-unfixed: true
           format: 'sarif'
           output: 'trivy-${{ matrix.component }}.sarif'
 
